crates/wdl-engine/tests/tasks/task-fail/error.txt
error: task execution failed for task `test`: process terminated with exit code 1
Attempt directory: attempts/0
Uploaded logs:
  stdout: attempts/0/stdout
  stderr: attempts/0/stderr

task stderr output (last 10 lines):

  this task is going to fail!

  ┌─ tests/tasks/task-fail/source.wdl:3:6
  │
3 │ task test {
  │      ^^^^ this task failed to execute

